package data_structure.labact4;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

/**
 * @brief Controller class for doubly linked list data struct
 */

public class DoublyLinkedListViewController extends MainViewController implements Initializable {
    /**
     * properties
     */

    /**
     * constructors
     */
    @Override
    public void initialize(URL url, ResourceBundle resourceBundle) {
    }
    
    /**
     * behaviors
     */
}
