package data_structure.labact4;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

/**
 * @brief Controller class for the stack scene
 */

public class StackViewController extends MainViewController implements Initializable {
    /**
     * properties
     */

    /**
     * constructors
     */
    @Override
    public void initialize(URL url, ResourceBundle resourceBundle) {
    }

    /**
     * behaviors
     */
}
