@startuml

title __LABACT4's Class Diagram__\n

    namespace data_structure.labact4 {
      interface data_structure.labact4.Buttons {
          {abstract} + binary_search_tree()
          {abstract} + doubly_linked_list()
          {abstract} + dynamic_array()
          {abstract} + exit_prog()
          {abstract} + hash_table()
          {abstract} + main_view()
          {abstract} + queue()
          {abstract} + singly_linked_list()
          {abstract} + stack()
          {abstract} + static_array()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.DoublyLinkedListViewController {
          + initialize()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.DynamicArrayViewController {
          + initialize()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.Main {
          {static} - universal_stage : Stage
          {static} + changeScene()
          {static} + getUniversal_stage()
          {static} + main()
          {static} + setUniversal_stage()
          + start()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.MainViewController {
          - static_array_button : Button
          + binary_search_tree()
          + doubly_linked_list()
          + dynamic_array()
          + exit_prog()
          + hash_table()
          + initialize()
          + main_view()
          + queue()
          + singly_linked_list()
          + stack()
          + static_array()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.SinglyLinkedListViewController {
          + initialize()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.StackViewController {
          + initialize()
      }
    }


    namespace data_structure.labact4 {
      class data_structure.labact4.StaticArrayController {
          + initialize()
      }
    }


  data_structure.labact4.DoublyLinkedListViewController .up.|> javafx.fxml.Initializable
  data_structure.labact4.DoublyLinkedListViewController -up-|> data_structure.labact4.MainViewController
  data_structure.labact4.DynamicArrayViewController .up.|> javafx.fxml.Initializable
  data_structure.labact4.DynamicArrayViewController -up-|> data_structure.labact4.MainViewController
  data_structure.labact4.Main -up-|> javafx.application.Application
  data_structure.labact4.MainViewController .up.|> data_structure.labact4.Buttons
  data_structure.labact4.MainViewController .up.|> javafx.fxml.Initializable
  data_structure.labact4.SinglyLinkedListViewController .up.|> javafx.fxml.Initializable
  data_structure.labact4.SinglyLinkedListViewController -up-|> data_structure.labact4.MainViewController
  data_structure.labact4.StackViewController .up.|> javafx.fxml.Initializable
  data_structure.labact4.StackViewController -up-|> data_structure.labact4.MainViewController
  data_structure.labact4.StaticArrayController .up.|> javafx.fxml.Initializable
  data_structure.labact4.StaticArrayController -up-|> data_structure.labact4.MainViewController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
